--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 		  <header>
 			      <h1>Vasanth Raj Rajarajan</h1>
 			          <p>AWS & DevOps Engineer</p>
-				      <a href="resume/Vasanth_Raj_Rajarajan_Resume.pdf" target="_blank" class="btn">Download Resume</a>
+				      <a href="resume/RVR DR UTD 2025.pdf" target="_blank" class="btn">Download Resume</a>
 				        </header>
 
 					  <section id="about">
 						      <h2>About Me</h2>
-						          <p>DevOps Engineer with 4+ years of experience in AWS, CI/CD pipelines, Docker, Kubernetes, Terraform, and monitoring tools like Prometheus and Grafana.</p>
+						          <p>DevOps Engineer with 4.1 years of experience in AWS, CI/CD pipelines, Docker, Kubernetes, Terraform, and monitoring tools like Prometheus and Grafana.</p>
 							    </section>
 
 							      <section id="skills">
